Bug 103525 - Some users can't launch LibO applications due to a fatal error: User installation could not be completed (user name with non-ASCII characters...)
Summary: Some users can't launch LibO applications due to a fatal error: User installa...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Installation (show other bugs)
Version:
(earliest affected)
5.2.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.0.0
Keywords:
: 47163 58495 104831 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-26 20:09 UTC by Jiří Hofman
Modified: 2024-04-03 04:30 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jiří Hofman 2016-10-26 20:09:13 UTC
Description:
Some users cannot launch LibreOffice applications after installation due to a fatal error: User installation could not be completed.

Only a Warning message is displayed:
Libre Office 5.2 - Fatal Error
The application cannot be started.
User installation could not be completed.

Another user on the same computer can launch the application.

I suspect that the reason is a Windows' login name of the user which contains non-ASCII characters. The user profile has not been created.

Steps to Reproduce:
1. Install Libre Office
2. Launch the application

Actual Results:  
Only a Warning message is displayed:
Libre Office 5.2 - Fatal Error
The application cannot be started.
User installation could not be completed.

Expected Results:
The Libre Office application is launched.


Reproducible: Always

User Profile Reset: No

Additional Info:
OS: Windows 10 Home 64bit


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
Comment 1 tommy27 2016-10-28 03:23:54 UTC
latest stable 5.1.6.2 version was released yesterday.
give it a try so we can understand if the issue is limited to the 5.2.x branch or affects the 5.1.x as well
Comment 2 Jiří Hofman 2016-11-01 19:34:32 UTC
(In reply to tommy27 from comment #1)
> latest stable 5.1.6.2 version was released yesterday.
> give it a try so we can understand if the issue is limited to the 5.2.x
> branch or affects the 5.1.x as well

I would like to but I do not have an environment for such tests right now. Sorry. Anybody else?
Comment 3 Jiří Hofman 2016-11-15 17:23:52 UTC
(In reply to tommy27 from comment #1)
> latest stable 5.1.6.2 version was released yesterday.
> give it a try so we can understand if the issue is limited to the 5.2.x
> branch or affects the 5.1.x as well

Version 5.1.6.2 is affected too. The app does not start and _no_ error message is shown for a user with non-ASCII characters in his username. User with a username with ASCII characters only has no problems

BTW: Version  5.2.3.3 is still affected too.
Comment 4 Aron Budea 2016-11-21 02:43:47 UTC
I created new users in Windows 7 (regular users with no special rights), and then started LO 5.2.3.3.

Names tried:
-Jiří: no error message, LO started normally,
-島袋: got error message "The application cannot be started. [context="user"] caught unexpected com.sun.star.ucb.ContentCreationException: Cannot create folder (invalid path):"

Not quite the same error message as reported, and not quite under the same circumstances, but there was an error. I wonder if Windows 10 could account for the difference, or if the setting "Language for non-Unicode programs" in Control Panel / Region and Language could have an impact here.
Comment 5 Buovjaga 2016-12-09 16:49:02 UTC
I got this error in 5.3 beta1 when I changed in the bootstrap.ini:
UserInstallation=$ORIGIN/../Data/settings

Win 10
Comment 6 opensuse.lietuviu.kalba 2017-02-27 08:33:47 UTC
I can reproduce bug with LibreOffice  5.2.5.1 in Windows 7 within account, that contains letter ė (non-ASCII).
But I can successfully start LibreOffice in another account, that name has only ASCII chars
Comment 7 Buovjaga 2017-02-27 10:06:41 UTC
Let's set to NEW.
Comment 8 Cezary Żemis 2017-05-18 11:21:20 UTC
Confirm this issue with:
LibreOffice 5.3.3 Win x64
Windows 10 Home, version 1607, OS Build 14393.1198, updated on 17 May 2017

The affected user has admin rights and has never run LibreOffice before on this PC. It is a new installation on a brand new (yet updated) Windows. The account has a non-ASCII character in the name.
Comment 9 Cezary Żemis 2017-05-18 11:28:24 UTC
(In reply to Cezary Żemis from comment #8)
> Confirm this issue with:
> LibreOffice 5.3.3 Win x64
> Windows 10 Home, version 1607, OS Build 14393.1198, updated on 17 May 2017
> 
> The affected user has admin rights and has never run LibreOffice before on
> this PC. It is a new installation on a brand new (yet updated) Windows. The
> account has a non-ASCII character in the name.

And setting "Language for non-Unicode programs" to Polish (which contains the suspected non-ASCII character) is a workaround.
Comment 10 Mike Kaganski 2017-09-14 10:48:58 UTC
A blind fix is in gerrit: https://gerrit.libreoffice.org/42274

If possible, please check if this solves the issue.
Comment 11 Buovjaga 2017-09-14 11:21:37 UTC
(In reply to Mike Kaganski from comment #10)
> A blind fix is in gerrit: https://gerrit.libreoffice.org/42274
> 
> If possible, please check if this solves the issue.

Not sure, if the guys are able to compile on Windows, but adding to CC never hurts..
Comment 12 Commit Notification 2017-09-14 12:47:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59402caefa12b922f2d0e2083e420a02356ea476

tdf#103525: a blind fix: try Unicode function first

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2017-10-16 06:11:19 UTC
A polite ping to Mike Kaganski: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks
Comment 14 Mike Kaganski 2017-10-16 06:12:34 UTC
(In reply to Xisco Faulí from comment #13)

Unfortunately, I cannot tell for sure: that was a blind fix, and I cannot test it.
Comment 15 opensuse.lietuviu.kalba 2017-10-16 06:37:58 UTC
I confirm, that I can sucessfully install LibreOffice from http://dev-builds.libreoffice.org/daily/master/Win-x86_64@42/2017-10-16_00.31.53/libo-master64~2017-10-16_00.31.53_LibreOfficeDev_6.0.0.0.alpha0_Win_x64.msi in VirtualBox and run with user, who has name containing "ŽėŠū"
Comment 16 Mike Kaganski 2017-10-16 06:44:51 UTC
(In reply to opensuse.lietuviu.kalba from comment #15)

Thanks, let's call fixed then.
Comment 17 Mike Kaganski 2023-01-03 08:58:40 UTC
*** Bug 104831 has been marked as a duplicate of this bug. ***
Comment 18 Mike Kaganski 2023-01-03 09:20:53 UTC
*** Bug 47163 has been marked as a duplicate of this bug. ***
Comment 19 Mike Kaganski 2023-01-03 09:21:01 UTC Comment hidden (obsolete)
Comment 20 Mike Kaganski 2023-01-03 09:21:54 UTC
*** Bug 58495 has been marked as a duplicate of this bug. ***