tdf#103525: a blind fix: try Unicode function first

Change-Id: If088efdcbf41807ac8fad2410953abb685c8ea01